fix: stop overflow in design.html by changing height parameter of section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ h3 {
 
 /* Design Page */
 #about-design {
-    height: 800px;
+    height: auto;
     text-align: center;
 }
 
